# linkki-web-api

./: Cargo.toml  Dockerfile  readme.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy.yml  test.yml
src/: events.rs  main.rs  types.rs
src/test-data/: basic.ics  recurrence.ics
